LINT/ roda lint para formatação e configura husky para rodar lint pre commit

--- a/src/styles/theme-transitions.css
+++ b/src/styles/theme-transitions.css
@@ -3,10 +3,13 @@
   transition: none !important;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
-  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+  transition:
+    background-color 0.5s ease-in-out,
+    color 0.5s ease-in-out;
 }
 
 body {
