--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @import "tw-animate-css";
 @import "./styles/theme-transitions.css";
 
@@ -15,16 +14,18 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
-  
+
   /* Prevenir transições durante o carregamento inicial */
   .no-transitions * {
     transition: none !important;
   }
-  
+
   html {
-    transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+    transition:
+      background-color 0.5s ease-in-out,
+      color 0.5s ease-in-out;
   }
-  
+
   /* Transições suaves para mudanças de tema */
   * {
     transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
